5ª questão - falta apenas editar o gráfico.

--- a/docs/RelatórioFinalMariaElisa.Rmd
+++ b/docs/RelatórioFinalMariaElisa.Rmd
@@ -17,8 +17,6 @@ Antes de responder às perguntas propostas, é necessário, primeiramente, conec
 library(usethis)
 use_git()
 use_github()
-
-
 ```
 
 ```{r eval=FALSE, include=FALSE}
@@ -26,7 +24,6 @@ use_github()
 # Importando os bancos de dados a serem utilizados
 
 remotes::install_github("curso-r/basesCursoR", force = TRUE)
-
 ```
 
 ```{r}
@@ -34,7 +31,6 @@ remotes::install_github("curso-r/basesCursoR", force = TRUE)
 imdb_completa <- basesCursoR::pegar_base("imdb_completa")
 imdb_pessoas <- basesCursoR::pegar_base("imdb_pessoas")
 imdb_avaliacoes <- basesCursoR::pegar_base("imdb_avaliacoes")
-
 ```
 
 ```{r eval=FALSE, include=FALSE}
@@ -52,7 +48,6 @@ library(readr)
 write_rds(imdb_completa, "data/imdb_completa.rds")
 write_rds(imdb_avaliacoes, "data/imdb_avaliacoes.rds")
 write_rds(imdb_pessoas, "data/imdb_pessoas.rds")
-
 ```
 
 Agora sim, responderei às perguntas.
@@ -70,45 +65,44 @@ library(lubridate)
 library(knitr)
 library(tibble)
 
-# Verificando qual mês teve o maior número de filmes: 
+# Verificando qual mês teve o maior número de filmes:
 
 recorde_filme_mes <- imdb_completa %>%
   mutate(data_config = as.Date(ymd(data_lancamento))) %>%
-  mutate(mês = month(data_config)) %>% 
-  filter(across(c(mês, ano), ~ !is.na(.))) %>% 
-  mutate(mês_ano = paste(mês, ano, sep = "/")) %>% 
-  group_by(mês_ano) %>% 
-  mutate(n_filmes = n_distinct(titulo)) %>% 
-  ungroup() %>% 
-  nest_by(mês_ano, n_filmes) %>% 
-  arrange(desc(n_filmes)) %>% 
-  head(1) %>% 
-  mutate(pos = 1) %>% 
-  select('Posição' = pos, 'Mês/Ano' = mês_ano, 'Número de lançamentos' = n_filmes) %>%
+  mutate(mês = month(data_config)) %>%
+  filter(across(c(mês, ano), ~ !is.na(.))) %>%
+  mutate(mês_ano = paste(mês, ano, sep = "/")) %>%
+  group_by(mês_ano) %>%
+  mutate(n_filmes = n_distinct(titulo)) %>%
+  ungroup() %>%
+  nest_by(mês_ano, n_filmes) %>%
+  arrange(desc(n_filmes)) %>%
+  head(1) %>%
+  mutate(pos = 1) %>%
+  select("Posição" = pos, "Mês/Ano" = mês_ano, "Número de lançamentos" = n_filmes) %>%
   kable()
 
 recorde_filme_mes
 
 # Verificando qual dia teve o maior número de filmes:
-  
-recorde_filme_dia <- imdb_completa %>% 
-  mutate(data_config = as.Date(ymd(data_lancamento))) %>%  
-  mutate(mês = month(data_config)) %>% 
-  mutate(dia = day(data_config)) %>% 
-  filter(across(c(dia, mês, ano), ~ !is.na(.))) %>% 
-  mutate(dia_mês_ano = paste(dia, mês, ano, sep = "/")) %>% 
-  group_by(dia_mês_ano) %>% 
-  mutate(n_filmes = n_distinct(titulo)) %>% 
-  ungroup() %>% 
-  nest_by(dia_mês_ano, n_filmes) %>% 
-  arrange(desc(n_filmes)) %>% 
-  head(1) %>% 
-  mutate(pos = 1) %>% 
-  select('Posição' = pos, 'Dia/Mês/Ano' = dia_mês_ano, 'Número de Lançamentos' = n_filmes) %>% 
+
+recorde_filme_dia <- imdb_completa %>%
+  mutate(data_config = as.Date(ymd(data_lancamento))) %>%
+  mutate(mês = month(data_config)) %>%
+  mutate(dia = day(data_config)) %>%
+  filter(across(c(dia, mês, ano), ~ !is.na(.))) %>%
+  mutate(dia_mês_ano = paste(dia, mês, ano, sep = "/")) %>%
+  group_by(dia_mês_ano) %>%
+  mutate(n_filmes = n_distinct(titulo)) %>%
+  ungroup() %>%
+  nest_by(dia_mês_ano, n_filmes) %>%
+  arrange(desc(n_filmes)) %>%
+  head(1) %>%
+  mutate(pos = 1) %>%
+  select("Posição" = pos, "Dia/Mês/Ano" = dia_mês_ano, "Número de Lançamentos" = n_filmes) %>%
   kable()
 
 recorde_filme_dia
-
 ```
 
 2. Qual o top 5 países com mais filmes na base?
@@ -118,21 +112,20 @@ recorde_filme_dia
 # Identificando o top 5 países com mais filmes na base IMDB:
 
 top_paises_filmes <- imdb_completa %>%
-  filter(!is.na(pais)) %>% 
-  mutate(pais_nova = str_split(pais, ", ")) %>% 
-  unnest(pais_nova) %>% 
-  group_by(pais_nova) %>% 
+  filter(!is.na(pais)) %>%
+  mutate(pais_nova = str_split(pais, ", ")) %>%
+  unnest(pais_nova) %>%
+  group_by(pais_nova) %>%
   mutate(n_filmes_pais = n_distinct(titulo)) %>%
-  ungroup() %>% 
-  nest_by(pais_nova, n_filmes_pais) %>% 
-  arrange(desc(n_filmes_pais)) %>% 
-  head(5) %>% 
-  rowid_to_column(var = "pos") %>% 
-  select('Posição' = pos, 'País' = pais_nova, 'Número de filmes' = n_filmes_pais) %>% 
+  ungroup() %>%
+  nest_by(pais_nova, n_filmes_pais) %>%
+  arrange(desc(n_filmes_pais)) %>%
+  head(5) %>%
+  rowid_to_column(var = "pos") %>%
+  select("Posição" = pos, "País" = pais_nova, "Número de filmes" = n_filmes_pais) %>%
   kable()
 
 top_paises_filmes
-
 ```
 
 3. Liste todas as moedas que aparecem nas colunas `orcamento` e `receita` da base `imdb_completa`.
@@ -147,15 +140,17 @@ library(readxl)
 
 # Identificando quais são as moedas dos orçamentos e das receitas dos filmes contidos na base IMDB:
 
-moedas_receita_orcamento <- imdb_completa %>% 
-  filter(across(c(orcamento, receita), ~!is.na(.))) %>% 
+moedas_receita_orcamento <- imdb_completa %>%
+  filter(across(c(orcamento, receita), ~ !is.na(.))) %>%
   summarise(across(
     .cols = c(orcamento, receita),
-    .fns = ~ str_extract((.x), pattern = c("^.[[:blank:][:digit:]]", "\\X+?[[:blank:][:digit:]]")))) %>% 
-  filter(across(c(orcamento, receita), ~!is.na(.))) %>% 
+    .fns = ~ str_extract((.x), pattern = c("^.[[:blank:][:digit:]]", "\\X+?[[:blank:][:digit:]]"))
+  )) %>%
+  filter(across(c(orcamento, receita), ~ !is.na(.))) %>%
   summarise(across(
     .cols = c(orcamento, receita),
-    .fns = ~ str_replace_all((.x), pattern = " ", "")))
+    .fns = ~ str_replace_all((.x), pattern = " ", "")
+  ))
 
 # Importando banco de dados que contém mais informações sobre as moedas que foram identificadas:
 
@@ -163,31 +158,32 @@ lista_moedas <- read_excel("D:/GitHub/RelatorioFinal2/data_raw/lista_moedas.xlsx
 View(lista_moedas)
 
 # Listando as moedas dos orçamentos dos filmes contidos na base IMDB:
-  
+
 moedas_orcamento <- moedas_receita_orcamento %>%
-  nest_by(orcamento) %>% 
+  nest_by(orcamento) %>%
   mutate(orcamento = case_when(
     orcamento == "$" ~ "USD",
-    TRUE ~ as.character(as.character(orcamento)))) %>% 
-  left_join(lista_moedas, by = "orcamento", copy = TRUE) %>% 
-  select('Código das moedas dos orçamentos dos filmes' = orcamento, 'Nome da moeda' = nome) %>% 
+    TRUE ~ as.character(as.character(orcamento))
+  )) %>%
+  left_join(lista_moedas, by = "orcamento", copy = TRUE) %>%
+  select("Código das moedas dos orçamentos dos filmes" = orcamento, "Nome da moeda" = nome) %>%
   kable()
 
 moedas_orcamento
 
 # Listando as moedas das receitas dos filmes contidos na base IMDB:
-  
+
 moedas_receita <- moedas_receita_orcamento %>%
-  nest_by(receita) %>% 
+  nest_by(receita) %>%
   mutate(receita = case_when(
     receita == "$" ~ "USD",
-    TRUE ~ as.character(as.character(receita)))) %>% 
-  left_join(lista_moedas, by = "receita", copy = TRUE) %>% 
-  select('Código das moedas das receitas dos filmes' = receita, 'Nome da moeda' = nome) %>% 
+    TRUE ~ as.character(as.character(receita))
+  )) %>%
+  left_join(lista_moedas, by = "receita", copy = TRUE) %>%
+  select("Código das moedas das receitas dos filmes" = receita, "Nome da moeda" = nome) %>%
   kable()
 
 moedas_receita
-
 ```
 
 4. Considerando apenas orçamentos e receitas em dólar ($), qual o gênero com maior lucro? E com maior nota média?
@@ -196,22 +192,24 @@ moedas_receita
 
 # Identificando qual é o gênero do filme que teve o maior lucro
 
-genero_maior_lucro <- imdb_completa %>% 
-  filter(across(c(orcamento, receita), ~!is.na(.), ~ str_detect((.x), pattern = "^.[[:blank:][:digit:]]"))) %>% 
+genero_maior_lucro <- imdb_completa %>%
+  filter(across(c(orcamento, receita), ~ !is.na(.), ~ str_detect((.x), pattern = "^.[[:blank:][:digit:]]"))) %>%
   mutate(across(
     .cols = c(orcamento, receita),
-    .fns = c(~ str_extract((.x), pattern = ".[[:digit:]]+!*")))) %>% 
+    .fns = c(~ str_extract((.x), pattern = ".[[:digit:]]+!*"))
+  )) %>%
   mutate(across(
     .cols = c(orcamento_1, receita_1),
-    .fns = ~ as.numeric(.x))) %>%
+    .fns = ~ as.numeric(.x)
+  )) %>%
   mutate(lucro = receita_1 - orcamento_1) %>%
-  filter(across(c(genero, lucro), ~!is.na(.))) %>% 
-  mutate(genero = str_split(genero, ", ")) %>% 
+  filter(across(c(genero, lucro), ~ !is.na(.))) %>%
+  mutate(genero = str_split(genero, ", ")) %>%
   unnest(genero) %>%
-  nest_by(titulo, genero, lucro) %>% 
-  arrange(desc(lucro)) %>% 
-  head(1, lucro) %>% 
-  select("Título"= titulo, "Gênero" = genero, "Lucro" = lucro) %>% 
+  nest_by(titulo, genero, lucro) %>%
+  arrange(desc(lucro)) %>%
+  head(1, lucro) %>%
+  select("Título" = titulo, "Gênero" = genero, "Lucro" = lucro) %>%
   kable()
 
 genero_maior_lucro
@@ -219,19 +217,18 @@ genero_maior_lucro
 
 # Identificando qual é o gênero do filme que obteve a maior nota média
 
-genero_maior_nota <- imdb_completa %>% 
-  left_join(imdb_avaliacoes, by = "id_filme", copy = TRUE) %>% 
-  filter(across(c(genero, nota_media), ~!is.na(.))) %>% 
-  mutate(genero = str_split(genero, ", ")) %>% 
-  unnest(genero) %>% 
-  nest_by(titulo, genero, nota_media) %>% 
-  arrange(desc(nota_media)) %>% 
-  head(1, nota_media) %>% 
-  select('Título' = titulo, 'Gênero' = genero, 'Nota média' = nota_media) %>% 
+genero_maior_nota <- imdb_completa %>%
+  left_join(imdb_avaliacoes, by = "id_filme", copy = TRUE) %>%
+  filter(across(c(genero, nota_media), ~ !is.na(.))) %>%
+  mutate(genero = str_split(genero, ", ")) %>%
+  unnest(genero) %>%
+  nest_by(titulo, genero, nota_media) %>%
+  arrange(desc(nota_media)) %>%
+  head(1, nota_media) %>%
+  select("Título" = titulo, "Gênero" = genero, "Nota média" = nota_media) %>%
   kable()
 
 genero_maior_nota
-
 ```
 
 5. Dentre os filmes na base `imdb_completa`, escolha o seu favorito. Então faça os itens a seguir:
@@ -242,57 +239,59 @@ a) Quem dirigiu o filme? Faça uma ficha dessa pessoa: idade (hoje em dia ou dat
 
 # Verificando qual é o nome do diretor do filme
 
-hair_nome_direcao <- imdb_completa %>% 
-  filter(str_detect(titulo, pattern = "Hair$")) %>% 
-  select('Nome do diretor(a)' = direcao)
+hair_nome_direcao <- imdb_completa %>%
+  filter(str_detect(titulo, pattern = "Hair$")) %>%
+  select("Nome do diretor(a)" = direcao)
 
 hair_nome_direcao
 
 # Calculando a idade que o diretor de "Hair" tinha quando faleceu
 
-milos_idade_falecimento <- imdb_pessoas %>% 
+milos_idade_falecimento <- imdb_pessoas %>%
   filter(str_detect(nome, pattern = "Milos Forman")) %>%
   mutate(across(
     .cols = c(data_nascimento, data_falecimento),
-    .fns = ~ as.Date(ymd(.)))) %>% 
-  mutate(idade_falecimento = as.period(data_falecimento - data_nascimento)/years(1))
+    .fns = ~ as.Date(ymd(.))
+  )) %>%
+  mutate(idade_falecimento = as.period(data_falecimento - data_nascimento) / years(1))
 
 # Calculando quantos filmes, além de "Hair", ele dirigiu
 
-milos_n_filmes <- imdb_completa %>% 
-  filter(str_detect(direcao, pattern = "Milos Forman")) %>% 
-  filter(str_detect(titulo, pattern = "Hair$", negate = TRUE)) %>% 
+milos_n_filmes <- imdb_completa %>%
+  filter(str_detect(direcao, pattern = "Milos Forman")) %>%
+  filter(str_detect(titulo, pattern = "Hair$", negate = TRUE)) %>%
   summarise(n_filmes = n_distinct(titulo))
 
 # Calculando os lucros médios dos filmes dirigidos por Milos Forman
 
-milos_lucro_medio <- imdb_completa %>% 
-  filter(str_detect(direcao, pattern = "Milos Forman")) %>% 
-  filter(across(c(receita, orcamento), ~!is.na(.), str_detect((.x), pattern = "^.[[:blank:][:digit:]]"))) %>% 
-  mutate(across(
-         .cols = c(orcamento, receita),
-         .fns = ~ (str_extract((.x), pattern = ".[[:digit:]]+!*")))) %>% 
+milos_lucro_medio <- imdb_completa %>%
+  filter(str_detect(direcao, pattern = "Milos Forman")) %>%
+  filter(across(c(receita, orcamento), ~ !is.na(.), str_detect((.x), pattern = "^.[[:blank:][:digit:]]"))) %>%
   mutate(across(
     .cols = c(orcamento, receita),
-    .fns = ~ as.numeric(.x))) %>% 
-  mutate(lucro = receita - orcamento) %>% 
+    .fns = ~ (str_extract((.x), pattern = ".[[:digit:]]+!*"))
+  )) %>%
+  mutate(across(
+    .cols = c(orcamento, receita),
+    .fns = ~ as.numeric(.x)
+  )) %>%
+  mutate(lucro = receita - orcamento) %>%
   summarise(lucro_medio = mean(lucro))
 
 # Calculando a frequência relativa de cada um dos gêneros dos filmes que Milos Forman dirigiu
 
-milos_generos_freq <- imdb_completa %>% 
-  filter(str_detect(direcao, pattern = "Milos Forman")) %>% 
-  mutate(genero = str_split(genero, pattern = ", ")) %>%   unnest(genero) %>% 
-  group_by(genero) %>% 
-  summarise(n = n(), na.rm = TRUE) %>% 
-  mutate(freq_genero = n/sum(n)) %>% 
-  mutate(freq_genero = freq_genero*100) %>% 
-  mutate(freq_genero = round(freq_genero, 2)) %>% 
-  arrange(desc(freq_genero)) %>% 
-  select('Gênero' = genero, 'Frequência relativa' = freq_genero) %>% 
+milos_generos_freq <- imdb_completa %>%
+  filter(str_detect(direcao, pattern = "Milos Forman")) %>%
+  mutate(genero = str_split(genero, pattern = ", ")) %>%
+  unnest(genero) %>%
+  group_by(genero) %>%
+  summarise(n = n(), na.rm = TRUE) %>%
+  mutate(freq_genero = n / sum(n)) %>%
+  mutate(freq_genero = freq_genero * 100) %>%
+  mutate(freq_genero = round(freq_genero, 2)) %>%
+  arrange(desc(freq_genero)) %>%
+  select("Gênero" = genero, "Frequência relativa" = freq_genero) %>%
   kable()
-  
-
 ```
 
 b) Qual a posição desse filme no ranking de notas do IMDB? E no ranking de lucro (considerando apenas valores em dólar)?
@@ -301,38 +300,38 @@ b) Qual a posição desse filme no ranking de notas do IMDB? E no ranking de luc
 
 # Calculando a posição de "Hair" no ranking de notas do IMDB
 
-posicao_nota_hair <- imdb_completa %>% 
- left_join(imdb_avaliacoes, by = "id_filme", copy = TRUE) %>% 
-  group_by(nota_media) %>% 
-  arrange(desc(nota_media)) %>% 
+posicao_nota_hair <- imdb_completa %>%
+  left_join(imdb_avaliacoes, by = "id_filme", copy = TRUE) %>%
+  group_by(nota_media) %>%
+  arrange(desc(nota_media)) %>%
   rowid_to_column(var = "pos") %>%
-  filter(str_detect(titulo, pattern = "Hair$")) %>% 
-  select('Filme' = titulo, 'Nota média' = nota_media, 'Posição' = pos) %>% 
+  filter(str_detect(titulo, pattern = "Hair$")) %>%
+  select("Filme" = titulo, "Nota média" = nota_media, "Posição" = pos) %>%
   kable()
 
 posicao_nota_hair
 
 # Calculando a posição de "Hair" no ranking de notas do IMDB
-  
-posicao_lucro_hair <- imdb_completa %>% 
-  filter(across(c(receita, orcamento), ~!is.na(.), str_detect((.x), pattern = "^.[[:blank:][:digit:]]"))) %>% 
-  mutate(across(
-         .cols = c(orcamento, receita),
-         .fns = ~ (str_extract((.x), pattern = ".[[:digit:]]+!*")))) %>% 
+
+posicao_lucro_hair <- imdb_completa %>%
+  filter(across(c(receita, orcamento), ~ !is.na(.), str_detect((.x), pattern = "^.[[:blank:][:digit:]]"))) %>%
   mutate(across(
     .cols = c(orcamento, receita),
-    .fns = ~ as.numeric(.x))) %>% 
-  mutate(lucro = receita - orcamento) %>% 
-  group_by(lucro) %>% 
-  arrange(desc(lucro)) %>% 
-  rowid_to_column(var = "pos") %>% 
-  filter(str_detect(titulo, "Hair$")) %>% 
-  select("Filme" = titulo, "Lucro" = lucro, "Posição" = pos) %>% 
+    .fns = ~ (str_extract((.x), pattern = ".[[:digit:]]+!*"))
+  )) %>%
+  mutate(across(
+    .cols = c(orcamento, receita),
+    .fns = ~ as.numeric(.x)
+  )) %>%
+  mutate(lucro = receita - orcamento) %>%
+  group_by(lucro) %>%
+  arrange(desc(lucro)) %>%
+  rowid_to_column(var = "pos") %>%
+  filter(str_detect(titulo, "Hair$")) %>%
+  select("Filme" = titulo, "Lucro" = lucro, "Posição" = pos) %>%
   kable()
 
 posicao_lucro_hair
-
-
 ```
 
 c) Em que dia esse filme foi lançado? E dia da semana? Algum outro filme foi lançado no mesmo dia? Quantos anos você tinha nesse dia?
@@ -341,29 +340,28 @@ c) Em que dia esse filme foi lançado? E dia da semana? Algum outro filme foi la
 
 # Data de lançamento do filme hair
 
-data_lancamento_hair <- imdb_completa %>% 
-  filter(str_detect(titulo, pattern = "Hair$")) %>% 
-  summarise(data_lancamento = as.Date(ymd(data_lancamento))) 
+data_lancamento_hair <- imdb_completa %>%
+  filter(str_detect(titulo, pattern = "Hair$")) %>%
+  summarise(data_lancamento = as.Date(ymd(data_lancamento)))
 
 data_lancamento_hair
 
 # Outros filmes que foram lançados no mesmo dia
 
-outros_filmes_lancados <- imdb_completa %>% 
-  filter(str_detect(titulo, pattern = "Hair$", negate = TRUE)) %>% 
+outros_filmes_lancados <- imdb_completa %>%
+  filter(str_detect(titulo, pattern = "Hair$", negate = TRUE)) %>%
   filter(str_detect(data_lancamento, pattern = "1979-05-16"))
 
 outros_filmes_lancados
 
 # Calculando a minha idade quando o filme foi lançado
 
-minha_idade <- imdb_completa %>% 
-  filter(str_detect(titulo, pattern = "Hair$")) %>% 
-  mutate(data_lancamento = as.Date(ymd(data_lancamento)))  %>% 
-  summarise(minha_idade = as.period(data_lancamento - as.Date(dmy("05 nov 1997")))/years(1))
+minha_idade <- imdb_completa %>%
+  filter(str_detect(titulo, pattern = "Hair$")) %>%
+  mutate(data_lancamento = as.Date(ymd(data_lancamento))) %>%
+  summarise(minha_idade = as.period(data_lancamento - as.Date(dmy("05 nov 1997"))) / years(1))
 
 minha_idade
-
 ```
 
 d) Faça um gráfico representando a distribuição da nota atribuída a esse filme por idade (base `imdb_avaliacoes`).
@@ -374,19 +372,44 @@ d) Faça um gráfico representando a distribuição da nota atribuída a esse fi
 
 library(ggplot2)
 
-# Extraindo o ID do filme para poder identificá-lo na base das avaliações:
-
-id_hair <- imdb_completa %>% 
-  filter(str_detect(titulo, pattern = "Hair$")) %>% 
-  select(id_filme)
-  
-id_hair
 
 # Gráfico das avaliações por idade
 
-avaliacoes_idade_hair <- imdb_avaliacoes %>% 
-  filter(str_detect(id_filme, pattern = "tt0079261")) 
+notas <- imdb_completa %>%
+  left_join(imdb_avaliacoes, by = "id_filme", copy = TRUE) %>%
+  filter(str_detect(titulo, pattern = "Hair$")) %>%
+  select(
+    nota_media_idade_0_18, nota_media_idade_18_30,
+    nota_media_idade_30_45, nota_media_idade_45_mais
+  ) %>%
+  summarise(nota_media = as.numeric(c(nota_media_idade_0_18, nota_media_idade_18_30, nota_media_idade_30_45, nota_media_idade_45_mais))) %>%
+  rowid_to_column()
 
-avaliacoes_idade_hair
+faixa_etaria <- list((1:4), c(
+  "0 a 18 anos", "18 a 30 anos", "30 a 45 anos",
+  "45 anos ou mais"
+))
+names(faixa_etaria) <- c("rowid", "faixa_etaria")
 
+faixa_etaria <- as.data.frame(faixa_etaria)
+
+grafico_avaliacoes_idade <- notas %>%
+  left_join(faixa_etaria, by = "rowid", copy = TRUE) %>%
+  select(nota_media, faixa_etaria) %>% 
+  ggplot() +
+  geom_col(aes(x = faixa_etaria, y = nota_media)) +
+  scale_fill_discrete() +
+  theme(strip.text = element_text(size = 12)) +
+  labs(title = "Figura 1 - Nota média das avaliações recebidas pelo filme \"Hair\" por faixa etária",
+       y = "Nota média das avaliações",
+       x = "Faixa etária",
+       caption = "Fonte: IMDB")+
+  theme_minimal() +
+  theme(axis.title.x = element_blank(),
+        strip.text.y = element_text(angle = 0),
+        plot.title = element_text(size = 12, face = "bold", hjust = 0.5),
+        plot.subtitle = element_text(hjust = 1),
+        plot.caption = element_text(hjust = 0.5))
+
+grafico_avaliacoes_idade
 ```
