--- a/docs/RelatórioFinalMariaElisa.Rmd
+++ b/docs/RelatórioFinalMariaElisa.Rmd
@@ -279,19 +279,13 @@ O gênero do filme com maior nota média foi:
 ::: {style="text-align: justify"}
 **5. Dentre os filmes na base `imdb_completa`, escolha o seu favorito. Então faça os itens a seguir:**
 
-Meu filme favorito é o musical "Hair". Se você nunca o assistiu, recomendo que assista ao clipe da música "The Flesh Failures", mas **atenção**, este vídeo **contém spoilers**:
+Meu filme favorito é o musical "Hair". Se você nunca o assistiu, recomendo que veja o clipe da música "The Flesh Failures", mas **atenção**, este vídeo **contém spoilers**:
 
-<<<<<<< HEAD
+
 <iframe style="display: block; margin: auto;" width="560" height="315" src="https://www.youtube.com/embed/NaAC9vDFozc" frameborder="0" gesture="media" allow="autoplay; encrypted-media" allowfullscreen></iframe>
 
 
-**OBS.:** Esta é a última cena do filme e, por coincidência, a minha preferida. Como costumava vê-lo com minha família quando era criança, demorei muito tempo para entender os sentimentos envolvidos neste. Desde que supostamente os entendi, vejo esta cena com alguma frequência.
-=======
-<iframe width="560" height="315" src="https://www.youtube.com/watch?v=0mH23CAV7jE" frameborder="0"     allowfullscreen></iframe>
-
-OBS.: Esta é a última cena do filme e, por coincidência, a minha preferida. Como costumava vê-lo com minha família quando era criança, demorei muito tempo para entender os sentimentos envolvidos neste. Desde que supostamente os entendi, vejo esta cena com alguma frequência.
->>>>>>> ea66d6d7199f123fdb166501d41eb3edc85fdac9
-:::
+**OBS.:** Esta é uma das últimas cenas do filme.
 
 **a) Quem dirigiu o filme? Faça uma ficha dessa pessoa: idade (hoje em dia ou data de falecimento), onde nasceu, quantos filmes já dirigiu, qual o lucro médio dos filmes que dirigiu (considerando apenas valores em dólar) e outras informações que achar interessante (base `imdb_pessoas`).**
 :::
